--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.9",
-    "node-schedule": "^2.0.0"
+    "node-schedule": "^2.0.0",
+    "request": "^2.88.2"
   }
 }
